--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,10 @@ ol {
     width: 360px;
     height: 200px;
 }
+
+.gallery img:hover,
+.gallery img:focus {
+    cursor: url('../img/bxs_hand-down.png'), pointer;
+    transform: scale(1.025);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
